chore: added no-scrollbar, scrollbar-hidden css class selector to hide scrollbars

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -2,6 +2,14 @@
 @import "tw-animate-css";
 @import "./themes/default.css";
 
+.scrollbar-hidden, .no_scrollbar {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hidden::-webkit-scrollbar, .no_scrollbar::-webkit-scrollbar {
+  display: none; /* WebKit */
+}
+
 @custom-variant dark (&: is(.dark *));
 
 @theme {
